fixtures/cs-cmp-01/bad/token-compare-template-literal.ts
import crypto from "crypto";

export function checkToken(token: string, expected: string) {
	return `${token}` === expected;
}

void crypto;
